--- a/01. 참조문서.md
+++ b/01. 참조문서.md
@@ -1,1 +1,2 @@
-DOM 문서 [https://developer.mozilla.org/ko/docs/Web/API/Document_Object_Model/%EC%86%8C%EA%B0%9C]
+DOM 문서 
+https://developer.mozilla.org/ko/docs/Web/API/Document_Object_Model/%EC%86%8C%EA%B0%9C
