--- a/01. 참조문서.md
+++ b/01. 참조문서.md
@@ -1,1 +1,1 @@
-* [DOM ](https://developer.mozilla.org/ko/docs/Web/API/Document_Object_Model/%EC%86%8C%EA%B0%9C)
+* [DOM 구조](https://developer.mozilla.org/ko/docs/Web/API/Document_Object_Model/%EC%86%8C%EA%B0%9C)
