--- a/02. 참조문서.md
+++ b/02. 참조문서.md
@@ -3,3 +3,4 @@
 * [Beautiful Soup 문서](https://www.crummy.com/software/BeautifulSoup/bs4/doc/)
 * [selenium](https://selenium-python.readthedocs.io/)
 * [scrapy](https://scrapy.org/)
+* [pillow](https://pillow.readthedocs.io/en/5.1.x/)
