--- a/03. 가상환경 만들기.md
+++ b/03. 가상환경 만들기.md
@@ -6,4 +6,10 @@
     conda create -n 가상환경이름 python=버전  
     conda create -n pyqt_env python=3.7  
     
- 
+4. 가상환경 활성화 
+    activate 가상환경이름  
+    activate pyqt_env  
+    
+5. 가상환경 비활성화
+    deactivate 가상환경이름  
+    deactivate pyqt_env
