Update 03. 가상환경 만들기.md

--- a/03. 가상환경 만들기.md
+++ b/03. 가상환경 만들기.md
@@ -13,3 +13,22 @@
 5. 가상환경 비활성화  
     deactivate 가상환경이름  
     deactivate pyqt_env
+
+6. 가상환경에 패키지 설치
+    * 가상환경 생성과 동시에 패키지 설치    
+        conda create -n 가상환경이름 python=버전 패키지이름  
+        conda create -n pyqt_env python=3.7 pyqt5  
+    * conda install을 이용해 원하는 가상환경에 패키지를 설치  
+        conda install --name 가상환경이름 패키지이름  
+        conda install --name pyqt_env pyqt5  
+    * 가상환경을 활성화 시킨 후, 그 내부에서 pip install 실행  
+        (base) >> activate 가상환경이름
+        (가상환경이름) >> pip install 패키지이름
+ 
+        (base) >> activate pyqt_env
+        (pyqt_env) >> pip install pyqt5
+
+7. 패키지 리스트 확인
+    * 현재 아나콘다의 패키지 리스트 확인  
+        conda list  
+
