Update 03. 가상환경 만들기.md

--- a/03. 가상환경 만들기.md
+++ b/03. 가상환경 만들기.md
@@ -22,7 +22,7 @@
         conda install --name 가상환경이름 패키지이름  
         conda install --name pyqt_env pyqt5  
     * 가상환경을 활성화 시킨 후, 그 내부에서 pip install 실행  
-        (base) >> activate 가상환경이름
+        (base) >> activate 가상환경이름  
         (가상환경이름) >> pip install 패키지이름
  
         (base) >> activate pyqt_env
@@ -31,4 +31,12 @@
 7. 패키지 리스트 확인
     * 현재 아나콘다의 패키지 리스트 확인  
         conda list  
-
+    * 원하는 가상환경의 패키지 리스트 확인
+        conda list -n 가상환경이름  
+    
+8. 설치된 가상환경 리스트 확인
+    * 현재 아나콘다의 전체 가상환경 리스트 조회  
+        conda info --envs  
+9. 가상환경 삭제  
+    conda remove -n 가상환경이름 --all   
+    (--all 옵션:가상환경에서 설치했던 모든 패키지들도 함께 삭제) 
