Update 02. 파이참과 아나콘다 가상 환경 연결 .md

--- a/02. 파이참과 아나콘다 가상 환경 연결 .md
+++ b/02. 파이참과 아나콘다 가상 환경 연결 .md
@@ -1,1 +1,7 @@
-File -> setting -> Project Interpreter
+File -> setting -> Project Interpreter  --> +
+
+Conda Environment 클릭 후 Existing environment을 체크한다.  
+이때 경로는 아나콘다가 설치된 폴더의 envs\자신이 생성한 가상환경 이름\python.exe 이다.  
+아나콘다없이 파이썬만 설치하고 사용하는 경우 C:\Program Files\Python폴더\python.exe  
+모든 프로젝트에 적용 클릭(후에 다른 환경을 사용하고 싶으면 프로젝트 내부에서 바꿀 수 있다.)  
+
