--- a/04. 참조문서.md
+++ b/04. 참조문서.md
@@ -4,3 +4,4 @@
 * [selenium](https://selenium-python.readthedocs.io/)
 * [scrapy](https://scrapy.org/)
 * [pillow](https://pillow.readthedocs.io/en/5.1.x/)
+* [Online JSON Viewer](http://jsonviewer.stack.hu/)
