--- a/01. 설치 패키지.md
+++ b/01. 설치 패키지.md
@@ -1,5 +1,7 @@
 pip install requests  
 pip install BeautifulSoup  
-pip install lxml  
+pip install selenium  
+pip install pandas
+pip install xlwt  
+pip install lxml    
 pip install pillow  
-pip install selenium
