Update 01. 설치 패키지.md

--- a/01. 설치 패키지.md
+++ b/01. 설치 패키지.md
@@ -7,7 +7,9 @@ pip install BeautifulSoup
 pip install selenium  
 pip install pandas  
 pip install xlwt  
-piip install openpyxl  
+pip install openpyxl  
+pip install xlrd  
+
 
 
 
