--- a/01. 설치 패키지.md
+++ b/01. 설치 패키지.md
@@ -1,18 +1,20 @@
-
-pip install BeautifulSoup  
-
-pip install requests  
-pip install lxml    
-pip install pillow 
-
-
-pip install selenium  
+pip install numpy  
+pip install xlrd  
 pip install pandas  
 pip install xlwt  
 pip install openpyxl  
-pip install xlrd  
-
-
-
+  
+pip install bs4   
+   
+pip install requests    
+pip install lxml      
+pip install pillow   
+  
+pip install selenium    
+pip install konlpy  
+pip install matplotlib  
+pip install wordcloud  
+pip install Image  
+pip install nltk  
 
  
